rendu du test technique - v1

--- a/Question 1/Makefile
+++ b/Question 1/Makefile
@@ -1,6 +1,11 @@
 SHELL := /bin/ksh
 
-# TESTING THE SCRIPT
+# RUNNING THE SCRIPT
 run_script_1_b:
 	@echo "Run du script Question 1.b"
-	cd python_virtual_environment; $$(poetry env info --path)/bin/python ../question_b.py -p EI -p EIRL -d 2020-02-01 -f 2020-09-01
+	cd python_virtual_environment; poetry install; $$(poetry env info --path)/bin/python ../question_b.py -p EI -p EIRL -d 2020-02-01 -f 2020-09-01
+
+# TESTING THE SCRIPT
+test_script_1_b:
+	@echo "Test du script Question 1.b"
+	cd python_virtual_environment; poetry install; $$(poetry env info --path)/bin/pytest ../test_question_b.py
